--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,24 @@
     width: 499px; 
     }
     
+    .banner h1{
+    color: white;
+    font-family: 'Poppins', sans-serif; 
+    font-size: 15px;
+    margin-top: -100px;
+    margin-left: 10%;
+    }
+    
+    .banner button{
+    color: black;
+    background-color: #FAF7F2;
+    font-family: 'Poppins', sans-serif; 
+    margin-top: 20px;
+    margin-left: 40%;
+    padding-left: 2%;
+    padding-right: 2%;
+    }
+    
     
 }
 
