Index updating again

--- a/css/index.css
+++ b/css/index.css
@@ -129,29 +129,39 @@
     
     .banner{
     width: 99.9%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top:
+    
     }
     
     #banner-picture{
-    width: 499px; 
+    width:99.9%;
     }
     
     .banner h1{
     color: white;
     font-family: 'Poppins', sans-serif; 
     font-size: 15px;
-    margin-top: -100px;
-    margin-left: 10%;
+    text-align: center;
+    margin-top: -155px;
+    
+    
     }
     
     .banner button{
     color: black;
     background-color: #FAF7F2;
     font-family: 'Poppins', sans-serif; 
-    margin-top: 20px;
-    margin-left: 40%;
-    padding-left: 2%;
-    padding-right: 2%;
     border-color: #FAF7F2;
+    
+    }
+    
+    .banner a{
+    margin-top: -50px;    
     }
     
     .box-1{
@@ -224,9 +234,54 @@
     margin-top: 20px;
     }
     
+    #hr-line{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: #6D6E71;   
+    }
+    
+    .donation-box{
+    width: 99.9%;
+    display: flex;
+    flex-flow: column wrap;
+    height: auto;
+    align-items: center;
+    text-align: center;
+    }
+    
+    .donation-box h2{
+    line-height: 1.2;
+    color: #6D6E71;
+    font-family: var(--main-headingfont);
+    margin-left: 4%;
+    margin-right: 4%;
+    }
+    
+    .donation-box img{
+    width: 100px;    
+    }
+    
+    .donation-box a{
+    color:#6D6E71;
+    background-color:#FAF7F2;
+    font-family: var(--main-textfont);
+    }
+    
+    .donation-box button{
+    background-color: #FAF7F2;
+    font-family: var(--main-textfont);
+    padding-right: 20px;
+    padding-left: 20px;
+    border-color: #6D6E71;
+    border-width: thin;
+    }
+    
 }
 
 
 @media only screen and (min-width: 1024px) {}
 @media only screen and (min-width:768px) and (max-width:1023px) {}
 @media screen and (min-width:501px){}
+
+    
