--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@
     
     .header{
         background-color: #FFFFFF;
-        box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
+        box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
         position: fixed;
         width: 100%;
         z-index: 3;
@@ -72,8 +72,9 @@
     }
     
     #logo{
-    width: 50px;
+    width: 100px;
     margin-left: 18px;
+    margin-top: 10px;
     }
     
     .header .menu-icon{
@@ -88,6 +89,7 @@
     background-color: #6D6E71;
     display: block;
     height: 2px;
+    top: 5px;
     width: 18px;
     position: relative;
     transition:background 2.s ease-out;
@@ -100,7 +102,7 @@
     width: 100%;
     position: absolute;
     transition:all .2 ease-out;
-    top: 5px;
+    top: 10px;
     background:#6D6E71;
     }
     
@@ -109,10 +111,12 @@
     display: block;
     height: 100%;
     width: 100%;
+    top: 5px;
     position: absolute;
     transition:all .2 ease-out;
-    top: -5px;
     background:#6D6E71;
+        
+    /* check her */
     }
     
     .header .menu-button{
@@ -134,7 +138,7 @@
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    margin-top:
+    background-color: black;
     
     }
     
@@ -275,6 +279,51 @@
     padding-left: 20px;
     border-color: #6D6E71;
     border-width: thin;
+    }
+    
+    
+    /* footer styling */
+    
+    footer{
+    width: 100%;
+    margin-top: 10px;
+    background-color: white;
+    display: flex;
+    flex-flow:  row wrap;
+    justify-content: space-around;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
+    }
+    
+    footer ul li{
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    list-style: none;
+    }
+    
+    #hr-lines{
+    width: 95%;    
+    }
+    
+    .logos img{
+    width: 40px;    
+    border-radius: 40px;
+    padding: 5px;
+    }
+    
+    .copyright{
+    width: 100%;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    color: #6D6E71;
+    font-family: var(--main-textfont);
+    font-size: 11px;
+    }
+    
+    .copyright p{
+    margin: 0;
+    padding: 0;
+    margin-left: 4%;
     }
     
 }
