--- a/css/productsite.css
+++ b/css/productsite.css
@@ -173,84 +173,7 @@
     }
     
     
-    .middle{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    
-    
-    
-    }
-    
-    .middle li{
-    list-style-type: none;
-    font-family: var(--main-textfont);
-    }
-    
-    .menu{
-    width: 80%;    
-    border: 1px solid black;
-    border-radius: 8px;
-    overflow: hidden;
-    background-color: white;
-    }
-    
-    .item{
-        border-top: 1px solid black;
-        overflow: hidden;
-    }
-    
-    .btn{
-    display: block;
-    padding: 16px 20px;
-    outline: 1px solid black;
-    outline-style: solid;
-    }
-    
-    .btn:before{
-    content: "";
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    }
-    
-    .btn i{
-    margin-right: 10px;    
-    }
-    
-    
-    .smenu{
-    overflow: hidden;
-    transition: max-height 0.3s;
-    max-height: 0;
-    }
-    
-    .smenu p{
-    display: block;
-    padding: 16px 26px;
-    margin: 4px 0;
-    position: relative;
-    }
-    
-    
-    .smenu p:before{
-    content: "";
-    position: absolute;
-    width: 6px;
-    height: 100%;
-    left: 0;
-    top: 0;
-    transition: 0.3s;
-    opacity: 0;
-    }
-    
-    .smenu p:hover:before{
-    opacity: 1;    
-    }
-    
-    .item:target .smenu{
-    max-height: 10em;    
-    }
+   
     
     .other-content{
     display: flex;
@@ -259,7 +182,69 @@
     }
     
     .other-content h2{
-    font-family: var(--main-headingfont);    
+    font-family: var(--main-headingfont);   
+    font-size: 20px;
     }
+    
+    .container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    }
+    
+    .product-description{
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    background-color: white;
+     border-bottom: 1px solid gray;
+    
+
+    
+    }
+    
+    .product-description h3{
+    margin-left: 5%;
+    font-family: var(--main-headingfont);
+    
+    }
+    
+    .content h5{
+    font-family: var(--main-headingtext);
+    font-size: 11px;
+    }
+    
+    .content{
+    width: 80%;
+    height: auto;
+    background-color: white;
+    color: gray;
+    font-family: var(--main-textfont);
+    font-size: 11px;
+    margin-left: 5%;
+    line-height: 2;
+    display: none;
+    }
+    
+    .content p{
+    font-family: var(--main-textfont);   
+    }
+    
+    .product-description:hover .content{
+    display: block;    
+    }
+    
+   
+     
+    .product-description:nth-last-child(1){
+    border: none;
+        
+    
+    }
+   
+
     
 }
