--- a/css/donation.css
+++ b/css/donation.css
@@ -132,9 +132,10 @@
     .header-text{
      display: flex;
     flex-flow: row wrap;
-    margin-left: 4%;
     height: auto;
     align-items: center;
+    width: 92%;
+    margin-left: 4%;
     
     }
     
@@ -233,7 +234,7 @@ height: auto;
     font-family: var(--main-headingfont);
     margin-bottom: 0;
     text-align: center;
-    font-size: 21px;
+    font-size: 16px;
 
     }
     
