--- a/css/index.css
+++ b/css/index.css
@@ -778,9 +778,90 @@
     }
     
     .banner img{
-    width: 99.9%;    
+    width: 99.9%;  
+    height: 640px;
     }
     
+   .banner{
+    width: 99.9%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    
+    }
+    
+    #banner-picture{
+    width:99.9%;
+    }
+    
+    .banner h1{
+    color: white;
+    font-family: 'Poppins', sans-serif; 
+    font-size: 45px;
+    text-align: center;
+    margin-top: -530px;
+    
+    
+    }
+    
+    .banner button{
+    color: black;
+    background-color: #FAF7F2;
+    font-family: 'Poppins', sans-serif; 
+    border-color: #FAF7F2;
+    font-size: 20px;
+    padding-left:100px;
+    padding-right: 100px;
+    
+    }
+    
+    .banner a{
+    margin-top: -50px;    
+    }
+    
+    
+    .containerz{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-top: 1%;
+    }
+    
+    .box-1, .box-2, .box-3{
+    width: 25%;
+    height: auto;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    }
+    
+    .box-1 img, .box-2 img, .box-3 img{
+    width: 100px;  
+    }
+    
+    .box-1 p, .box-2 p, .box-3 p{
+    font-family: var(--main-textfont);   
+    font-size: 13px;
+    line-height: 1.5;
+    }
+    
+    .box-1 img{
+    width: 140px;
+    }
+    
+    .box-3 img{
+    width: 90px;    
+    }
+    
+    
+    #hr-line{
+    width: 80%;    
+    }
 }
 
     
