--- a/css/donation.css
+++ b/css/donation.css
@@ -15,6 +15,12 @@
 
 
 @media screen and (max-width:767px){
+    
+    
+    #searchbar, #list, .web-navbar-list{
+    display: none;
+    }
+    
     body{
     margin: 0;
     padding: 0;
@@ -253,9 +259,61 @@ height: auto;
     width: 60%; 
     }
     
+    
+     footer{
+    width: 100%;
+    margin-top: 10px;
+    background-color: white;
+    display: flex;
+    flex-flow:  row wrap;
+    justify-content: space-around;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
+    }
+    
+    footer ul li{
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    list-style: none;
+    }
+    
+    #hr-lines{
+    width: 95%;    
+    }
+    
+    footer ul{
+    }
+    
+    .logos img{
+    width: 40px;    
+    border-radius: 40px;
+    padding: 5px;
+    }
+    
+    .copyright{
+    width: 100%;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    color: #6D6E71;
+    font-family: var(--main-textfont);
+    font-size: 11px;
+    }
+    
+    .copyright p{
+    margin: 0;
+    padding: 0;
+    margin-left: 4%;
+    }
+    
+    
 }
 
 @media only screen and (min-width:768px) and (max-width:1024px){
+    
+     #searchbar, #list, .web-navbar-list{
+    display: none;
+    }
+    
      body{
     margin: 0;
     padding: 0;
@@ -495,11 +553,318 @@ height: auto;
     width: 60%; 
     }   
     
+     footer{
+    width: 100%;
+    margin-top: 10px;
+    background-color: white;
+    display: flex;
+    flex-flow:  row wrap;
+    justify-content: space-around;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
+    }
+    
+    footer ul li{
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    list-style: none;
+    }
+    
+    #hr-lines{
+    width: 95%;    
+    }
+    
+    footer ul{
+    }
+    
+    .logos img{
+    width: 40px;    
+    border-radius: 40px;
+    padding: 5px;
+    }
+    
+    .copyright{
+    width: 100%;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    color: #6D6E71;
+    font-family: var(--main-textfont);
+    font-size: 11px;
+    }
+    
+    .copyright p{
+    margin: 0;
+    padding: 0;
+    margin-left: 4%;
+    }
+    
+    
 }
 
+@media only screen and (min-width: 1025px) {
+.menu-button, .menu-icon, .menu{
+    display: none;
+    }
+    
+    body{
+    margin: 0;
+    padding: 0;
+    background-color:#FAF7F2;
+    }
+    
+  .header{
+        background-color: #FFFFFF;
+        box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
+        width: 100%;
+        z-index: 3;
+        display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    }
+    
+    
+    #logo{
+    width: 100px;   
+    margin-left: 40px;
+    }
+    
+    .header ul li img{
+    width: 30px;    
+    }
+    
+    .header ul li{
+    list-style: none;
+    font-family: var(--main-headingfont);
+    padding: 10px;
+    display: flex;
+    flex-flow:  row wrap;
+    align-content: center;
+    color: #6D6E71;
+    }
+    
+    .header ul li:hover{
+    color: darkgray;
+    }
+    
+    #list{
+    display: flex;
+    flex-flow: row wrap;
+   width: 20%;
+    align-content: center;
+    justify-content: center;
+    }
+    
+    #searchbar{
+    width: 40%;
+    font-family: var(--main-headingfont);
+    border:2px solid #6D6E71;
+    margin-left: 170px;
+    }
+    
+    .web-navbar-list{
+    width: 100%;
+    background-color: black;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    height: 30px;
+    align-content: center;
+    }
+    
+    .web-navbar-list ul{
+    display: flex;
+    height: 20px;
+    width: 70%;
+    justify-content: space-around;
+    margin-right: 5%;
+    }
+    
+    .web-navbar-list ul li a{
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    text-decoration: none;
+    }
+    
+    .web-navbar-list ul li a:hover{
+    color: lightgray;
+    }
+    
+    .main-container{
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    }
+    
+   
+    
+    .container-right{
+    width: 60%;
+    height: auto;
+    }
+    
+    .container1{
+    width: 25%;    
+    }
+    
+    .image-placer img{
+    width: 80%;
+    }
+    
+    .class1{
+    width: 50%;
+    height: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    height: auto;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    justify-content: center;
+    
+    }
+    
+    .class1 h2{
+    font-family: var(--main-headingfont);
+    margin-bottom: 0;
+    text-align: center;
+    font-size: 25px;
 
+    }
+    
+    
+    .class1 p{
+    text-align: center;
+    font-family: var(--main-textfont);
+    font-size: 14px;
+    }
+    
+    .hr-line{
+    width: 50%;
+    }
+    
+    
+    
+   
+    .header-text{
+     display: flex;
+    flex-flow: row wrap;
+    height: auto;
+    align-items: center;
+    width: 92%;
+    
+    }
+    
+    .header-text h1{
+    margin-top: 100px;
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    font-size: 22px;
+    }
+    
+    
+    .form{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    
+    }
+    
+    form{
+    background-color: #E8866C;   
+    width: 80%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
+    }
+    
+    form input{
+    background-color: #FAF7F2;
+    border-color:#FAF7F2; 
+    font-family: var(--main-textfont);
+    width: 40%;
+  margin-left: 4%;
+    margin-top: 4%;
+    padding: 4px;
+    }
+    .form hr{
+    width: 90%; 
+    margin-top: 20px;
+    }
+    
+    #vejnavn, #mobilnummer, #telefonnummer, #email, #cpr-nr{
+     width: 88%;    
+    }
+    
+    #nulstil{
+    margin-bottom: 15px;    
+    }
+    
+    #godkend{
+    margin-left: 40px;    
+    }
+    
+    
+    .form h5{
+    font-family: var(--main-headingfont);
+    margin-left: 4%;
+    margin-bottom: -10px;
 
-
+    }
+    
+    
+     footer{
+    width: 100%;
+    margin-top: 10px;
+    background-color: white;
+    display: flex;
+    flex-flow:  row wrap;
+    justify-content: space-around;
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .3);
+    }
+    
+    footer ul li{
+    font-family: var(--main-headingfont);
+    color: #6D6E71;
+    list-style: none;
+    }
+    
+    #hr-lines{
+    width: 95%;    
+    }
+    
+    footer ul{
+    }
+    
+    .logos img{
+    width: 40px;    
+    border-radius: 40px;
+    padding: 5px;
+    }
+    
+    .copyright{
+    width: 100%;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    color: #6D6E71;
+    font-family: var(--main-textfont);
+    font-size: 11px;
+    }
+    
+    .copyright p{
+    margin: 0;
+    padding: 0;
+    margin-left: 4%;
+    }
+    
+    
+}
 
 
 
