--- a/css/productsite.css
+++ b/css/productsite.css
@@ -300,6 +300,10 @@ align-content: center;
     list-style: none;
     }
     
+    footer ul li:hover{
+    color: darkgray;    
+    }
+    
     #hr-lines{
     width: 95%;    
     }
@@ -615,6 +619,10 @@ align-content: center;
     list-style: none;
     }
     
+    footer ul li:hover{
+    color: darkgray;    
+    }
+    
     #hr-lines{
     width: 95%;    
     }
@@ -895,6 +903,10 @@ height: auto;
     font-family: var(--main-headingfont);
     color: #6D6E71;
     list-style: none;
+    }
+    
+    footer ul li:hover{
+    color: darkgray;    
     }
     
     #hr-lines{
